fix(gateway): маршрутизация прокси | docs(api): локализация swagger
